fixed when cancle high contrast mode will not change the gray in dark mode

--- a/wordle/src/app/Wordle.css
+++ b/wordle/src/app/Wordle.css
@@ -1,4 +1,4 @@
-* {
+.allDad * {
   box-sizing: border-box;
 }
 
